# Face_DAI_ARM

./: README.md
FaceAlignment/: CMakeLists.txt
FaceAlignment/release/: CMakeCache.txt  Makefile  cmake_install.cmake
FaceDetection/: CMakeLists.txt
FaceDetection/include/: sse2neon.h~
FaceDetection/include/util/: math_func.h~
FaceDetection/release/: CMakeCache.txt  Makefile  cmake_install.cmake
FaceIdentification/: CMakeLists.txt  CMakeLists.txt~
FaceIdentification/include/: demo.h  face_rec.h  libabc.h
FaceIdentification/include/dlib/: CMakeLists.txt~
FaceIdentification/include/dlib/dnn/: layers.h  layers.h~  loss.h  loss.h~
FaceIdentification/include/dlib/geometry/: rectangle.h
FaceIdentification/include/dlib/image_transforms/: interpolation.h  random_cropper.h
FaceIdentification/include/dlib/statistics/: running_gradient.h  running_gradient.h~
FaceIdentification/include/dlib/threads/: threads_kernel_shared.h
FaceIdentification/release/: CMakeCache.txt  Makefile  cmake_install.cmake  libfacev_lib.so.4.5
FaceIdentification/release/src/: Makefile  cmake_install.cmake
FaceIdentification/release/src/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
FaceIdentification/src/: CMakeLists.txt  math_functions.cpp
FaceIdentification/src/api/: CMakeLists.txt  demo.cpp  demo2.cpp  dlib_face_rec.cpp  face_rec.cpp
FaceIdentification/src/license/generate/: generate_license  generate_license.cpp
FaceIdentification/src/test/: Makefile~  test_face_verification.cpp
